End Section-Identity[Login , Register ]

--- a/HMH.API/appsettings.json
+++ b/HMH.API/appsettings.json
@@ -8,5 +8,17 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "HMHDataBase": "Server=.;Database=HMHDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "EmailSetting": {
+    "Port": 465,
+    "From": "hadramout.modren.hospital@gmail.com",
+    "UserName": "hadramout.modren.hospital@gmail.com",
+    "Password": "jvsnzgckdgplalnx",
+    "Smtp": "smtp.gmail.com"
+
+  },
+  "Token": {
+    "Secret": "*&###$@@HMH#@$%$@$__(&^%$#@!!!sECRITUT$%^#kEY",
+    "Issure": "https://localhost:7266/"
   }
 }
